# log-viewer

./: README.md  log-viewer.cabal
app/: Main.hs
src/: Slf4jLogs.hs
test/: Spec.hs
