name:                log-viewer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/log-viewer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Slf4jLogs
  build-depends:       base >= 4.7 && < 5
                     , bytestring
  default-language:    Haskell2010

executable log-viewer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , log-viewer
                     , resourcet, bytestring, text
                     , conduit, conduit-combinators, conduit-extra
                     , scotty, http-types, blaze-html, shakespeare
  default-language:    Haskell2010

test-suite log-viewer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , log-viewer
                     , tasty, tasty-hunit
                     , bytestring
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/log-viewer
